test/cases/compile_errors/non-integer_tag_type_to_enum.zig
const Foo = enum(f32) {
    A,
};
export fn entry() void {
    var f: Foo = undefined;
    _ = &f;
}

// error
//
// :1:18: error: expected integer tag type, found 'f32'
